--- a/client/index.html
+++ b/client/index.html
@@ -82,7 +82,7 @@
 
     <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
     <script>
-        const socket = io('http://localhost');
+        const socket = io('https://chat-room-nestjs-socket-io.onrender.com');
 
         const chatRoom = document.getElementById('chat-room');
         const messageForm = document.getElementById('message-form');
